# sars-2-spike-domains

./: README.md  pyproject.toml
src/sars_2_spike_domains/: sequences.py  spike_numbers.py
src/sars_2_spike_domains/cli/: print_domains.py  print_sequences.py
tests/: test_numbers.py  test_sequences.py
